[DUOS-2931][risk=no] Implement v4 Algorithm (#925)
